# DRF_adress

./: README.md  pyproject.toml  requirements.txt
address_api/address/: models.py  urls.py  views.py
address_api/address/migrations/: 0001_initial.py  0002_auto_20210211_0103.py  0003_auto_20210211_0107.py
address_api/address_api/: asgi.py  settings.py  urls.py  wsgi.py
drf_adress/: manage.py
drf_adress/adress/: models.py  serializers.py  urls.py  views.py
drf_adress/adress/migrations/: 0001_initial.py  0002_auto_20210210_1913.py  0003_auto_20210210_1913.py  0004_auto_20210210_1922.py  0005_auto_20210210_2001.py  0006_auto_20210210_2019.py
drf_adress/drf_adress/: asgi.py  settings.py  urls.py  wsgi.py
