[tool.poetry]
name = "drf_adress"
version = "0.1.0"
description = ""
authors = ["Quesia <quesiasts@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
asgiref = "3.3.1"
certifi = "2020.12.5"
chardet = "4.0.0"
Django = "3.1.6"
djangorestframework = "3.12.2"
idna = "2.10"
prettyconf = "2.2.1"
pytz = "2021.1"
requests = "2.25.1"
sqlparse = "0.4.1"
urllib3 = "1.26.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
